k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: heart-api

spec:
  replicas: 1

  selector:
    matchLabels:
      app: heart-api

  template:
    metadata:
      labels:
        app: heart-api

    spec:
      containers:
        - name: heart-api

          image: ghcr.io/bhooshaan-2025cs05032/mlops-assignment:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 8000

          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"

            limits:
              memory: "512Mi"
              cpu: "500m"

          readinessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /docs
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
