k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heart-api-service
spec:
  type: ClusterIP
  selector:
    app: heart-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
